--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':advert')
-//    implementation project(':advert')
+//    implementation 'com.github.HeyMouser:AdvertPage:0.1'
 }
