--- a/advert/build.gradle
+++ b/advert/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -31,4 +31,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.19"
+    //必选项
+//    implementation "org.greenrobot:greendao:3.2.2"
+    implementation 'com.yidian.android:adsdk:1.2.1'
+
 }
